Add zoom control methods to CandleStickChart
Problem: EnhancedChartDisplay calls zoomIn(), zoomOut(), resetZoom() and close()
methods on CandleStickChart, but these methods didn't exist, causing compilation errors

Solution: Implement zoom control methods on CandleStickChart:
- zoomIn(): Decrease visible candles by 5 (minimum MIN_VISIBLE_CANDLES)
- zoomOut(): Increase visible candles by 5 (maximum MAX_VISIBLE_CANDLES)
- resetZoom(): Reset to TARGET_VISIBLE_CANDLES default
- close(): Already existed, no changes needed
- All methods update visibleCandles field and call requestChartRedraw()

Result: All compilation errors resolved, build now succeeds with 429 source files